--- a/src/index.css
+++ b/src/index.css
@@ -14,4 +14,5 @@ p {
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif !important;
+  background: #000000 !important;
 }
